Package_Tools/glib/Package_Tools/include-C/glib-2.0/gio/in_arbeit/fertig/gmemoryoutputstream.h

#define G_TYPE_MEMORY_OUTPUT_STREAM         (g_memory_output_stream_get_type ())
#define G_MEMORY_OUTPUT_STREAM(o)           (G_TYPE_CHECK_INSTANCE_CAST ((o), G_TYPE_MEMORY_OUTPUT_STREAM, GMemoryOutputStream))
#define G_MEMORY_OUTPUT_STREAM_CLASS(k)     (G_TYPE_CHECK_CLASS_CAST((k), G_TYPE_MEMORY_OUTPUT_STREAM, GMemoryOutputStreamClass))
#define G_IS_MEMORY_OUTPUT_STREAM(o)        (G_TYPE_CHECK_INSTANCE_TYPE ((o), G_TYPE_MEMORY_OUTPUT_STREAM))
#define G_IS_MEMORY_OUTPUT_STREAM_CLASS(k)  (G_TYPE_CHECK_CLASS_TYPE ((k), G_TYPE_MEMORY_OUTPUT_STREAM))
#define G_MEMORY_OUTPUT_STREAM_GET_CLASS(o) (G_TYPE_INSTANCE_GET_CLASS ((o), G_TYPE_MEMORY_OUTPUT_STREAM, GMemoryOutputStreamClass))
typedef struct _GMemoryOutputStreamClass    GMemoryOutputStreamClass;
/**
 * GReallocFunc:
 * @data: memory block to reallocate
 * @size: size to reallocate @data to
 *
 * Changes the size of the memory block pointed to by @data to
 * @size bytes.
 *
 * The function should have the same semantics as realloc().
 *
 * Returns: a pointer to the reallocated memory
 */
typedef gpointer (* GReallocFunc) (gpointer data,
                                   gsize    size);
GType          g_memory_output_stream_get_type      (void) ;
GOutputStream *g_memory_output_stream_new           (gpointer             data,
                                                     gsize                size,
                                                     GReallocFunc         realloc_function,
                                                     GDestroyNotify       destroy_function);
GOutputStream *g_memory_output_stream_new_resizable (void);
gpointer       g_memory_output_stream_get_data      (GMemoryOutputStream *ostream);
gsize          g_memory_output_stream_get_size      (GMemoryOutputStream *ostream);
gsize          g_memory_output_stream_get_data_size (GMemoryOutputStream *ostream);
gpointer       g_memory_output_stream_steal_data    (GMemoryOutputStream *ostream);
GBytes *       g_memory_output_stream_steal_as_bytes (GMemoryOutputStream *ostream);